partial search and load time

--- a/devfest.html
+++ b/devfest.html
@@ -36,6 +36,9 @@
         Authorize
       </button>
     </div>
+    <div id="load-div" style="display:none">
+    	<button id="load-button" onclick="callScriptFunction()">Load</button>
+ 	</div>
     <form class="search">
     	<table style="width:80%">
     		<tr>
