--- a/devfest.html
+++ b/devfest.html
@@ -61,13 +61,13 @@
     	<form class = "result-form">
 	    	<table id="results" style="width:80%">
 	    		<tr>
-	    			<td>Selected</td>
-	    			<td>FirstName</td>
-	    			<td>LastName</td>
-	    			<td>Email</td>
-	    			<td>Event</td>
-	    			<td>Twitter</td>
-	    			<td>Cancelled</td>
+	    			<th></th>
+	    			<th>First Name</th>
+	    			<th>Last Name</th>
+	    			<th>Email</th>
+	    			<th>Event</th>
+	    			<th>Twitter</th>
+	    			<th>Cancelled</th>
 	    		</tr>
 	    	</table>
 		    <input type="submit" value="Fill In Below">
@@ -88,12 +88,12 @@
 				<td>&nbsp;</td>
 			</tr>
 			<tr>
-				<td><input type="radio" name="amount" value="5" checked>$5</td>
+				<td><input type="radio" name="amount" value="0" checked>$0</td>
+				<td><input type="radio" name="amount" value="5">$5</td>
 				<td><input type="radio" name="amount" value="10">$10</td>
 				<td><input type="radio" name="amount" value="15">$15</td>
 				<td><input type="radio" name="amount" value="20">$20</td>
 				<td><input type="radio" name="amount" value="25">$25</td>
-				<td><input type="radio" name="amount" value="30">$30</td>
 			</tr>
 			<tr>
 				<td>&nbsp;</td>
