--- a/devfest.html
+++ b/devfest.html
@@ -143,9 +143,10 @@
 				<td>&nbsp;</td>
 			</tr>
 			<tr>
-				<td><input type="radio" name="type" value="normal">Normal</td>
-				<td><input type="radio" name="type" value="speaker">Speaker</td>
-				<td><input type="radio" name="type" value="staff">Staff</td>
+				<td><input type="text" name="id" class="aid" placeholder="Enter ID" autofocus /></td>
+				<td><input type="radio" name="stype" value="normal">Normal</td>
+				<td><input type="radio" name="stype" value="speaker">Speaker</td>
+				<td><input type="radio" name="stype" value="staff">Staff</td>
 			</tr>
 		</table>
 		<br/>
