added total checked in

--- a/devfest.html
+++ b/devfest.html
@@ -9,9 +9,10 @@
 			<li><a href="{{pathFor route='add'}}">Add</a></li>
 			<li><a href="{{pathFor route='edit'}}">Edit</a></li>
 			<li><a href="{{pathFor route='purchase'}}">Purchase</a></li>
-			<li><a href="{{pathFor route='log'}}">Log</a></li>
+			<li><a href="{{pathFor route='log'}}">Log</a></li>			
 		{{/if}}
 		<li><a href="{{pathFor route='event'}}">Check-In</a></li>
+		<li><a href="{{pathFor route='totals'}}">Totals</a></li>
 	</ul>
 </template>
 
@@ -272,6 +273,11 @@
 <template name="log">
 	<h1>Log</h1>
 	<textarea rows="30" cols="120" class="log-text"></textarea>
+</template>
+
+<template name="totals">
+	<h1>Totals</h1>
+	{{event}} : {{eventtotal}}
 </template>
 
 <template name="logitem">
