adding notebots pic

--- a/devfest.html
+++ b/devfest.html
@@ -12,7 +12,7 @@
 			<li><a href="{{pathFor route='log'}}">Log</a></li>
 			<li><a href="{{pathFor route='totals'}}">Totals</a></li>
 		{{/if}}
-		<li><a href="{{pathFor route='event'}}">Check-In</a></li>		
+		<li><a href="{{pathFor route='event'}}">Check-In</a></li>
 	</ul>
 </template>
 
@@ -263,6 +263,7 @@
 		</div>
 	</form>
 	<div class="printlabel {{allowed}} {{event}}">
+		<img src="http://2015.jsconf.asia/img/sumobattles.png" height="240" border="0" />
 	    <span class="name">
 	        {{name}}
 	    </span>
